--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Risk Management: Set stop-loss orders and diversify your portfolio.
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2024 FaithInFuture. All rights reserved.
+        Copyright © 2024 FaithInFuture. All rights reserved...
       </div>
     </footer>
 
