--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
   <title>FaithInFuture</title>
 </head>
 
@@ -49,6 +52,9 @@
   </div>
   <div class="btn-sub"><button class="btn-container"><a href="https://wa.link/27woz9" style="color:white">Contact
         Us</a></button></div>
+        <div class="limited-seats">
+          <span>Limited seats available!</span>
+      </div>
   <!-- <img src="assets/final_ad.png" alt="add" height="700px" width="100px" style="border-radius:5%;margin-left:10%;margin-right:30%;" /> -->
   <div class="our-offer">
     <h2 class="section__header">Our Offerings </h2> 
@@ -262,8 +268,8 @@
         <!-- <img src="user-2.jpg" alt="product" /> -->
         <!-- <P>"The course content was well-organized and easy to follow. I especially appreciated the real-world examples
           and case studies."</P> -->
-        <p>"या क्लासेसनी मला शेअर बाजाराबद्दलचे भीतीचे वातावरण बदलून दिले. इथे शिकलेली सगळी माहिती प्रॅक्टिकल आहे,
-          ज्यामुळे मी आता आत्मविश्वासाने गुंतवणूक करू शकतो."</p>
+        <p>" Faith in Future या क्लासेसनी मला शेअर बाजाराबद्दलचे भीतीचे वातावरण बदलून दिले. इथे शिकलेली सगळी माहिती प्रॅक्टिकल आहे,
+          ज्यामुळे मी आता आत्मविश्वासाने गुंतवणूक करू शकते."</p>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
@@ -310,16 +316,17 @@
                   <li> Derivative Analyst</li>
                   <li> Financial Advisor</li>
                   <li> NISM Certified</li>
+                  <li> SEBI Authorized</li>
                 </ul>
               </div>
               <div class="product_card">
                 <h2>Mr.Vaibhav Shinde</h2>
                 <ul class="inst-li">
                   <li> 6+ Year of Experience</li>
-                  <li> Research Analyst</li>
-                  <li> Derivative Analyst</li>
                   <li> Financial Advisor</li>
-                  <li> NISM Certified</li>
+                  <li> Pro Trader</li>
+                  <li> Investor</li>
+                  <li> Derivative Analyst</li>
                 </ul>
                 <!-- </div> -->
               </div>
